[project]
name = "cms"
version = "0.1.0"
description = ""
authors = [
    {name = "Shannon Mulloy",email = "smulloy21@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown (>=3.10.2,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cms", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
